--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "json:server": "json-server --watch db/db.json"
+    "json:server": "json-server --watch db.json"
   },
   "keywords": [],
   "author": "",
